--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
   "require": {
     "php": ">=8.0",
     "nette/di": "^3.0.0",
-    "symfony/event-dispatcher": "^4.3.1 || ^5.0.0 || ^6.0.0"
+    "symfony/event-dispatcher": "^4.3.1 || ^5.0.0 || 6.0.9"
   },
   "require-dev": {
     "ninjify/nunjuck": "^0.4",
