--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
   "require": {
     "php": ">=8.0",
     "nette/di": "^3.0.0",
-    "symfony/event-dispatcher": "^4.3.1 || ^5.0.0 || 6.0.9"
+    "symfony/event-dispatcher": "^4.3.1 || ^5.0.0 || 6.0.9",
+    "symfony/event-dispatcher-contracts": "v3.0.2"
   },
   "require-dev": {
     "ninjify/nunjuck": "^0.4",
